main screen colour change

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3268,7 +3268,7 @@ input, select, textarea {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background: #c277a4;
+			background: #fff3fa;
 			content: '';
 			display: block;
 			height: 100%;
