--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3334,7 +3334,7 @@ input, select, textarea {
 
 			#intro a:hover {
 				border-bottom-color: transparent;
-				color: #008080 !important;
+				color: #5e0335 !important;
 			}
 
 		#intro strong, #intro b {
@@ -3373,8 +3373,8 @@ input, select, textarea {
 			#intro input[type="button"]:hover,
 			#intro button:hover,
 			#intro .button:hover {
-				box-shadow: inset 0 0 0 2px #008080;
-				color: #008080 !important;
+				box-shadow: inset 0 0 0 2px #5e0335;
+				color: #5e0335 !important;
 			}
 
 			#intro input[type="submit"].primary,
@@ -3384,7 +3384,7 @@ input, select, textarea {
 			#intro .button.primary {
 				background-color: #ffffff;
 				box-shadow: none;
-				color: #008080 !important;
+				color: #5e0335 !important;
 			}
 
 				#intro input[type="submit"].primary:hover,
@@ -3392,7 +3392,7 @@ input, select, textarea {
 				#intro input[type="button"].primary:hover,
 				#intro button.primary:hover,
 				#intro .button.primary:hover {
-					background-color: #008080;
+					background-color: #5e0335;
 				}
 
 		#intro h1 {
