--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2206,8 +2206,8 @@ input, select, textarea {
 	button,
 	.button {
 		background-color: transparent;
-		box-shadow: inset 0 0 0 2px #212931;
-		color: #212931 !important;
+		box-shadow: inset 0 0 0 2px #000000;
+		color: #000000 !important;
 	}
 
 		input[type="submit"]:hover,
@@ -2215,8 +2215,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 2px #008080;
-			color: #008080 !important;
+			box-shadow: inset 0 0 0 2px #5e0335;
+			color: #5e0335 !important;
 		}
 
 		input[type="submit"].primary,
@@ -2224,7 +2224,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #212931;
+			background-color: #000000;
 			box-shadow: none;
 			color: #ffffff !important;
 		}
@@ -2234,7 +2234,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #008080;
+				background-color: #5e0335;
 			}
 
 /* Form */
@@ -2475,7 +2475,7 @@ input, select, textarea {
 	}
 
 	label {
-		color: #212931;
+		color: #000000;
 	}
 
 	input[type="text"],
@@ -2491,7 +2491,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #008080;
+			border-color: #5e0335;
 		}
 
 	select {
@@ -2500,7 +2500,7 @@ input, select, textarea {
 
 		select option {
 			background-color: #ffffff;
-			color: #212931;
+			color: #000000;
 		}
 
 	.select-wrapper:before {
@@ -2526,7 +2526,7 @@ input, select, textarea {
 
 	input[type="checkbox"]:focus + label:before,
 	input[type="radio"]:focus + label:before {
-		border-color: #008080;
+		border-color: #5e0335;
 	}
 
 	::-webkit-input-placeholder {
@@ -2890,7 +2890,7 @@ input, select, textarea {
 	}
 
 	ul.icons li a.icon:hover:before {
-		color: #008080;
+		color: #5e0335;
 	}
 
 	ul.icons.alt li .icon:before {
@@ -2898,7 +2898,7 @@ input, select, textarea {
 	}
 
 	ul.icons.alt li a.icon:hover:before {
-		box-shadow: inset 0 0 0 2px #008080;
+		box-shadow: inset 0 0 0 2px #5e0335;
 	}
 
 /* Section/Article */
@@ -2909,7 +2909,7 @@ input, select, textarea {
 
 	header {
 		cursor: default;
-		color: #7a5c58
+		color: #515151
 	}
 
 		header > .date {
@@ -2918,54 +2918,54 @@ input, select, textarea {
 			height: 1;
 			margin: 0 0 1rem 0;
 			position: relative;
-			color: #7a5c58
+			color: #515151
 		}
 
 		header > p {
 			font-style: italic;
-			color: #7a5c58;
+			color: #515151;
 		}
 
 		header > h1 + p {
 			font-size: 1.1rem;
 			margin-top: -0.5rem;
 			line-height: 2;
-			color: #7a5c58
+			color: #515151
 		}
 
 		header > h2 + p {
 			font-size: 1rem;
 			margin-top: -0.75rem;
-			color: #7a5c58
+			color: #515151
 		}
 
 		header > h3 + p {
 			font-size: 0.9rem;
 			margin-top: -0.75rem;
-			color: #7a5c58
+			color: #515151
 		}
 
 		header > h4 + p {
 			font-size: 0.8rem;
 			margin-top: -0.75rem;
-			color: #7a5c58
+			color: #515151
 		}
 
 		header.major {
 			margin: 0 0 4rem 0;
 			text-align: center;
-			color: #7a5c58
+			color: #515151
 		}
 
 			header.major > :last-child {
 				margin-bottom: 0;
-				color: #7a5c58
+				color: #515151
 			}
 
 			header.major > p {
 				margin-top: 0;
 				text-align: center;
-				color: #7a5c58
+				color: #515151
 			}
 
 			header.major > .date {
@@ -3094,7 +3094,7 @@ input, select, textarea {
 		}
 
 	table th {
-		color: #212931;
+		color: #000000;
 	}
 
 	table thead {
@@ -3203,18 +3203,18 @@ input, select, textarea {
 	}
 
 	.pagination a {
-		color: #212931 !important;
+		color: #000000 !important;
 	}
 
 		.pagination a:hover {
-			color: #008080 !important;
-			border-color: #008080;
+				color: #5e0335 !important;
+			border-color: #5e0335;
 			z-index: 1;
 		}
 
 			.pagination a:hover + a,
 			.pagination a:hover + span {
-				border-left-color: #008080;
+				border-left-color: #5e0335;
 			}
 
 		.pagination a.active {
